--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logoone.png" type="image/x-icon">
     <title>Threat Guardian</title>
 </head>
 <body>
@@ -15,7 +16,9 @@
     
             <div class="content">
                 <nav>
-                    <div class="logo">ThreatGuardian</div>
+                    <div class="logo">
+                        <img src="logoone.png" alt="">ThreatGuardian
+                    </div>
                     <div class="links">
                         <a href="#">Home</a>
                         <a href="#">Aboutus</a>
@@ -26,14 +29,14 @@
                     </div>
                     <div class="auth-buttons">
                         <a href="#" class="btn sign-up">Sign Up</a>
-                        <a href="#" class="btn log-in">Log In</a>
+                        <a href="login.html" class="btn log-in">Log In</a>
                     </div>
                 </nav>
     
                 <div class="main-text">
-                    <h1>Idea to software, fast.</h1>
-                    <p>Build software collaboratively with the power of AI, on any device, without spending a second on setup</p>
-                    <a href="#" class="btn start-creating">Start creating</a>
+                    <h1>We are ThreatGuardian</h1>
+                    <p>Shielding Your Digital world from tomorrows threats</p>
+                    <a href="#" class="btn start-creating">Explore</a>
                 </div>
             </div>
         </div>
